Adds responsiveness to header avatar to fix display on small screens

--- a/src/components/Avatar.module.css
+++ b/src/components/Avatar.module.css
@@ -26,6 +26,21 @@
   animation: showMessage 3s linear;
 }
 
+.profileAvatar {
+  display: inline-block;
+  width: 70px;
+  height: 70px;
+  border-radius: 35px;
+  margin-bottom: 0px;
+  margin-right: 10px;
+}
+
+@media only screen and (max-device-width: 375px) {
+  .profileAvatar {
+    display: none;
+  }
+}
+
 @keyframes showMessage {
   0% {
     opacity: 0;
